# tensrus

./: .gitignore  Cargo.toml  README.md  build.rs
brainy-demo/: Cargo.toml
brainy-demo/src/: main.rs
brainy-derive/: Cargo.toml
brainy-derive/src/: lib.rs
makemore-1/: Cargo.toml
makemore-1/src/: main.rs
proptest-regressions/: matrix.txt  var.txt
src/: blas.rs  broadcast.rs  differentiable.rs  distribution.rs  dyn_tensor.rs  encoding.rs  errors.rs  flow.rs  generic_tensor.rs  generic_tensor2.rs  iterator.rs  lib.rs  main.rs  matrix.rs  matrix2.rs  nn.rs  numeric.rs  op.rs  op2.rs  render.rs  scalar.rs  scalar2.rs  shape.rs  slice.rs  storage.rs  tensor.rs  tensor2.rs  tensor_view.rs  translation.rs  type_assert.rs  value.rs  var.rs  vector.rs  vector2.rs  view.rs
src/tensor/: mod.rs
src/var/: graph.rs  input.rs  mod.rs  output.rs  param.rs  var_ref.rs
tensorous-demo/: Cargo.toml
tensorous-demo/src/: main.rs
tensorous-derive/: Cargo.toml
tensorous-derive/src/: lib.rs
tensrus-demo/: Cargo.toml
tensrus-demo/src/: main.rs
tensrus-derive/: Cargo.toml
tensrus-derive/src/: lib.rs
tests/: flow_test.rs  test_matmul.rs  value_test.rs
