[package]
name = "tensrus"
version = "0.1.0"
edition = "2021"

[dependencies]
seq-macro = "0.3"
num = "0.4"
tensrus-derive = { path = "tensrus-derive" }
blas = "0.22"
rand = "0.9.0-alpha.1"
rand_distr = "0.5.0-alpha.1"
static_assertions = "1.1"

[dev-dependencies]
proptest = "1.0.0"

[features]
slow_tests = []
